--- a/index.ipynb
+++ b/index.ipynb
@@ -635,11 +635,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = None\n",
+    "num_of_repeats = 3\n",
     "num_of_repeats # 3"
    ]
   },
